nx standalone with angular universal setup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,19 @@
-<nicedayv2-nx-welcome></nicedayv2-nx-welcome>
+<!--<nicedayv2-nx-welcome></nicedayv2-nx-welcome>-->
+<h1>TEST</h1>
+<h2>TEST</h2>
+<h2>TEST</h2>
+<h2>TEST</h2>
+<h2>TEST</h2>
+<h2>TEST</h2>
+
+
+<br>
+<p>
+   bad choices!!!
+</p>
+<ul>
+    <li>sms</li>
+    <li>voice</li>
+    <li>push</li>
+    <li>internet</li>
+</ul>
